# contextDB-mcp-server

./: COMPREHENSIVE_MCP_DOCUMENTATION.md  MCP_tools.md  README.md  datasources.example.json  pyproject.toml  server.py
src/: Startup.md
src/contextDB/: __main__.py  adapter_factory.py  datasource_registry.py  server.py
src/contextDB/adapters/: __init__.py  aurora_adapter.py  base_adapter.py  postgres_adapter.py  redshift_adapter.py
src/contextDB/tools/: __init__.py
src/contextDB/tools/universal/analysis/: __init__.py  metrics.py  performance.py
src/contextDB/tools/universal/discovery/: __init__.py  datasources.py  overview.py
src/redshift_mcp_server/: db_utils.py  redshift_mcp_server.py  server.py
src/redshift_mcp_server/resources/: __init__.py
src/redshift_mcp_server/tools/: __init__.py  business_metrics.py  data_distribution.py  data_quality.py  discover_schema_metadata.py  execute_sql.py  find_table_dependencies.py  list_schemas.py  list_tables.py  query_performance.py  table_profile.py
