[project]
name = "redshift-mcp-server"
version = "0.2.0"
description = "A comprehensive Redshift MCP server with metadata discovery and analysis features."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastmcp>=2.12.3",
    "mcp[cli]>=1.5.0",
    "python-dotenv>=1.1.0",
    "redshift-connector>=2.1.5",
]
