[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextDB"
version = "1.0.0"
description = "A comprehensive Multi-Database MCP server with metadata discovery and analysis features for Redshift, PostgreSQL, Aurora, and MySQL."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["mcp", "redshift", "postgres", "database", "metadata", "ai", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "asyncpg>=0.30.0",
    "fastmcp>=2.12.3",
    "hatchling>=1.18.0",
    "mcp[cli]>=1.5.0",
    "python-dotenv>=1.1.0",
    "redshift-connector>=2.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
contextDB = "contextDB.__main__:main"


[tool.hatch.build.targets.wheel]
packages = ["src/contextDB"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
